<resources>
    <string name="app_name">Festinare</string>
    <string name="title_activity_index">Festinare</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password_length">This password is too short, it must have more than 7 letters</string>
    <string name="error_invalid_password_confirmation">Please confirm your password correctly</string>
    <string name="error_connection">Please connect to the network</string>
    <string name="error_blankSpace_all">You must enter all fields</string>
    <string name="error_login">Login Error, please try later</string>
    <string name="error_invalid_login">Please log in again</string>
    <string name="error_register">Register Error, please try later</string>
    <string name="error_login_wrong_data">The username or password you entered is incorrect</string>
    <string name="error_gcm_registration_title">Google Cloud Messaging Error</string>
    <string name="error_gcm_registration_msg">There was an error registering the device on Google Cloud Messaging. Do you want to retry?</string>
    <string name="error_gcm_registration_msg_connection">You need to be connected to the internet to register to device to receive awesome discounts</string>

    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="category_picker_title">Choose categories for the discounts</string>
    <string name="no_category_selected">You didn\'t select a category. If you want to get discount go to preferences and choose a category</string>
</resources>
